レイアウト変更

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,7 +2,7 @@
 
 // 全体の背景色
 body {
-  background-color: #fff9f4;
+  background-color: #F4F4F4;
 }
 
 // フッター
@@ -14,6 +14,12 @@ footer {
   width: 100%;
   height: 80px;
   text-align:center;
+  background-color: #FFFFFF;
+}
+
+// ヘッダー
+header {
+  background-color: #FFFFFF;
 }
 
 
