--- a/app/views/public/genres/_genre.html.erb
+++ b/app/views/public/genres/_genre.html.erb
@@ -1,7 +1,7 @@
 <div class="genre_search mx-auto">
-  <table class="table table-borderless" style="border: solid 2px #4e454a; width: 180px;">
+  <table class="table table-borderless" style="border: solid 2px #F4F4F4; width: 180px;">
     <tr>
-      <th class="text-center" style="border: solid 1px #4e454a;" colspan="2">家電製品一覧</th>
+      <th class="text-center" style="border: solid 1px #F4F4F4;" colspan="2">家電製品一覧</th>
     </tr>
     <% genres.each do |genre| %>
       <tbody>
