--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -51,8 +51,8 @@
          <%= f.text_area :introduction, class:"form-control" %>
        </div>
        <div class="form-group text-center">
-         <%= f.submit '更新する', class: "btn btn-success mr-5" %>
-         <%= link_to "戻る", post_path(@post.id), class: "btn btn-secondary ml-5" %>
+         <%= f.submit '更新する', class: "btn btn-outline-success mr-5" %>
+         <%= link_to "戻る", post_path(@post.id), class: "btn btn-outline-dark ml-5" %>
        </div>
        <% end %>
      </div>
