--- a/app/views/public/users/chcek.html.erb
+++ b/app/views/public/users/chcek.html.erb
@@ -9,8 +9,8 @@
           退会する場合は、「退会する」をクリックしてください。
         </p>
         <div class="d-flex justify-content-around mt-5">
-          <%= link_to "退会する", withdraw_path, method: :patch, :class => "btn btn-danger ms-3", data: { confirm: "本当に退会しますか？" }  %>
-          <%= link_to "退会しない", user_mypage_path(current_user), :class => "btn btn-primary ms-3" %>
+          <%= link_to "退会する", withdraw_path, method: :patch, :class => "btn btn-outline-danger ms-3", data: { confirm: "本当に退会しますか？" }  %>
+          <%= link_to "退会しない", user_mypage_path(current_user), :class => "btn btn-outline-primary ms-3" %>
         </div>
       </section>
     </div>
