--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -42,7 +42,7 @@
 
       <div class="row d-flex justify-content-center">
         <tr>
-          <td><%= f.submit "変更を保存", class:"btn btn-success" %></td>
+          <td><%= f.submit "変更を保存", class:"btn btn-outline-dark" %></td>
         </tr>
       </div>
     <% end %>
