--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -44,7 +44,7 @@
       <table class="table table-borderless">
         <div class="row">
           <tr>
-            <td><%= link_to "編集する", edit_admin_user_path, class: "btn btn-outline-secondary btn-block" %></td>
+            <td><%= link_to "編集する", edit_admin_user_path, class: "btn btn-outline-dark btn-block" %></td>
           </tr>
         </div>
       </table>
@@ -63,17 +63,19 @@
           <% @posts.each do |post| %>
             <div class="card col-12" style="margin-bottom: 10px;">
               <div class="row">
-                <div class="col-3 m-auto" style="padding-left: 40px;">
-                  <%= image_tag post.user.get_profile_image, width: 100, height: 100, class: 'rounded-circle' %>
+                <div class="col-4 m-auto text-center border-right">
+                  <%= link_to image_tag(post.user.get_profile_image, width: 100, height: 100, class: 'rounded-circle') %>
+                  ユーザー名: <%= post.user.name %>
                 </div>
-                <div class="col-9">
+                <div class="col-8">
                   <div class="card-body">
                     <h5 class="card-title"><%= link_to post.title, admin_post_path(post.id) %></h5>
-                     <p class="card-text"><br>
+                     <p class="card-text">
                                           ジャンル：<%= post.genre.name %><br>
-                                          型番：<%= post.product_name %>
+                                          品番：<%= post.product_name %><br>
+                                          参考になった：   <%= post.favorites.count %>
                      </p>
-                     <p class="card-text"><%= post.created_at.strftime("%Y年%m月%d日") %>
+                     <p class="card-text text-right"><%= post.created_at.strftime("%Y年%m月%d日") %>投稿</p>
                   </div>
                 </div>
               </div>
