--- a/app/views/public/genres/show.html.erb
+++ b/app/views/public/genres/show.html.erb
@@ -23,29 +23,34 @@
         <%= link_to '評価の低い順', genre_path(star_count_few: "true"), class:"btn btn-outline-dark #{'active' if params[:star_count_few]}" %>
       </li>
     </ul>
-    <div class="mb-3 mx-auto" style="max-width: 600px; ">
+    <div class="mb-3 mx-auto" style="max-width: 700px; ">
       <div class="row no-gutters">
         <% if !@posts.empty? %>
           <% @posts.each do |post| %>
-            <div class="card col-12" style="margin-bottom: 10px;">
+            <div class="card col-12" style="margin-bottom: 20px;">
               <div class="row">
-                <div class="col-3 m-auto" style="padding-left: 40px;">
-                  <%= link_to image_tag(post.user.get_profile_image, width: 90, height: 90, class: 'rounded-circle'), user_mypage_path(post.user) %>
+                <div class="col-4 m-auto text-center border-right">
+                  <%= link_to image_tag(post.user.get_profile_image, width: 120, height: 120, class: 'rounded-circle'), user_mypage_path(post.user) %><br>
+                  ユーザー名: <%= post.user.name %>
                 </div>
-                <div class="col-9">
+                <div class="col-8">
                   <div class="card-body">
                     <h5 class="card-title"><%= link_to post.title, post_path(post.id) %></h5>
-                    <p class="card-text"><%= post.created_at.strftime("%Y年%m月%d日") %>
+                     <p class="card-text">
+                                          品番：<%= post.product_name %><br>
+                                          参考になった：   <%= post.favorites.count %>
+                     </p>
+                     <p class="card-text text-right"><%= post.created_at.strftime("%Y年%m月%d日") %>投稿</p>
                   </div>
                 </div>
               </div>
             </div>
-          <% end %>
+            <% end %>
       </div>
     </div>
-    <%= render 'partial_template/paginate', posts: @posts %>
-    <% else %>
-    まだ投稿がありません
-    <% end %>
+    　<%= render 'partial_template/paginate', posts: @posts %>
+      <% else %>
+      まだ投稿がありません
+      <% end %>
   </div>
 </div>
