--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -48,10 +48,9 @@
         <%= f.text_area :introduction, class:"form-control custom-text-area" %>
       </div>
       <div class="form-group text-center">
-        <%= f.submit '　投　稿　', class: "btn btn-primary" %>
+        <%= f.submit '　投　稿　', class: "btn btn-outline-dark" %>
       </div>
       <% end %>
     </div>
   </div>
 </div>
-
