--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -60,6 +60,14 @@
         </table>
       </div>
     </div>
+    <div class="text-center mt-4">
+       <% if @post.user == current_user %>
+       <%= link_to "編集",edit_post_path(@post),class:"btn btn-outline-success mr-5" %>
+       <% end %>
+       <% if @post.user == current_user %>
+       <%= link_to "削除", post_path(@post), class:"btn btn-outline-danger ml-5", method: :delete , data: {confirm: "本当に消しますか？"} %>
+       <% end %>
+     </div>
   </div>
 
   <div class="col-3">
@@ -74,22 +82,14 @@
           <% unless @post.user == current_user || current_user.guest_user? %>
         <div>
           <%= form_with model: [@post, @comment], url:post_comments_path(@post),method: :post do|f| %>
-          <%= f.text_area :text, rows: '5', placeholder: "コメントをここに" %>
+          <%= f.text_area :text, rows: '5', placeholder: "コメントをここに", class:"form-control" %>
         </div>
         <div class="text-center mb-2">
-          <%= f.submit "コメント", class: "btn btn-primary" %>
+          <%= f.submit "コメント", class: "btn btn-outline-primary mt-4" %>
           <% end %>
         </div>
         <% end %>
       </div>
     </div>
-     <div class="btn-group">
-       <% if @post.user == current_user %>
-       <%= link_to "編集",edit_post_path(@post),class:"btn btn-sm btn-success" %>
-       <% end %>
-       <% if @post.user == current_user %>
-
-       <% end %>
-     </div>
   </div>
 </div>
