--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -32,8 +32,8 @@
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
     </div>
     
-    <div class="actions">
-      <%= f.submit "新規登録", class:"btn btn-success mt-3" %>
+    <div class="text-center">
+      <%= f.submit "新規登録", class:"btn btn-outline-dark mt-4" %>
     </div>
   </div>
   <% end %>
