--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -35,9 +35,9 @@
           <tr>
             <td colspan="2">
               <div class="d-flex justify-content-between mt-5">
-                <%= f.submit "編集内容を保存", class: "btn btn-primary" %>
-                <%= link_to "マイページに戻る" , user_mypage_path(current_user), class: "btn btn-secondary" %>
-                <%= link_to "退会する", chcek_path, class: "btn btn-danger" %>
+                <%= f.submit "編集内容を保存", class: "btn btn-outline-primary" %>
+                <%= link_to "マイページに戻る" , user_mypage_path(current_user), class: "btn btn-outline-dark" %>
+                <%= link_to "退会する", chcek_path, class: "btn btn-outline-danger" %>
               </div>
             </td>
         </table>
