--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'public/shared/error_messages', resource: @post %>
 <div class="row">
   <div class="col-7 offset-2 mb-3">
     <div class="card">
@@ -80,15 +81,10 @@
           <%= render 'public/comments/comments_list', post: @post %>
         </div>
           <% unless @post.user == current_user || current_user.guest_user? %>
-        <div>
-          <%= form_with model: [@post, @comment], url:post_comments_path(@post),method: :post do|f| %>
-          <%= f.text_area :text, rows: '5', placeholder: "コメントをここに", class:"form-control" %>
-        </div>
-        <div class="text-center mb-2">
-          <%= f.submit "コメント", class: "btn btn-outline-primary mt-4" %>
+            <div>
+              <%= render 'public/comments/form', post: @post , comment: @comment %>
+            </div>
           <% end %>
-        </div>
-        <% end %>
       </div>
     </div>
   </div>
