admin 詳細投稿削除修正

--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -58,7 +58,7 @@
       </div>
     </div>
     <div class="text-center mt-4">
-      <%= link_to "投稿削除", post_path(@post), class:"btn btn-outline-danger", method: :delete , data: {confirm: "本当に消しますか？"} %>
+      <%= link_to "投稿削除", adminpost_path(@post), class:"btn btn-outline-danger", method: :delete , data: {confirm: "本当に消しますか？"} %>
     </div> 
   </div>
 
