--- a/app/views/public/genres/_genre.html.erb
+++ b/app/views/public/genres/_genre.html.erb
@@ -1,12 +1,12 @@
 <div class="genre_search mx-auto">
   <table class="table table-borderless" style="border: solid 2px #F4F4F4; width: 180px;">
     <tr>
-      <th class="text-center" style="border: solid 1px #F4F4F4;" colspan="2">家電製品一覧</th>
+      <th class="text-center" style="border: solid 1px #F4F4F4;" colspan="2"><h5><strong>家電製品一覧</strong></h5></th>
     </tr>
     <% genres.each do |genre| %>
       <tbody>
         <tr>
-          <td class="text-center"><%= link_to genre.name, genre_path(genre.id), method: :get %></td>
+          <td class="text-left"><%= link_to genre.name, genre_path(genre.id), method: :get %></td>
           <td><%= genre.posts.count %> 件</td>
         </tr>
       </tbody>
