--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col text-center">
       <div class="image-container my-5 ">
-        <%= image_tag 'topページ.jpg', class: 'img-fluid rounded-ig'%>
+        <%= image_tag 'topページ.jpg', class: "img-fluid rounded-ig", style:"width: 1000px;"%>
       </div>
       <div class="main-text">
         <div class="text-content text-dark mt-4 mb-5">
