--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -51,7 +51,7 @@
     </div>
   </div>
 </div>
-  
+
 <div class="row my-4">
   <h4 class="col-12 text-center border p-3 my-3">ユーザー投稿一覧</h4>
 </div>
@@ -64,18 +64,33 @@
             <div class="card col-12" style="margin-bottom: 10px;">
               <div class="row">
                 <div class="col-4 m-auto text-center border-right">
-                  <%= link_to image_tag(post.user.get_profile_image, width: 100, height: 100, class: 'rounded-circle') %>
+                  <%= link_to image_tag(post.user.get_profile_image, width: 120, height: 120, class: 'rounded-circle') %><br>
                   ユーザー名: <%= post.user.name %>
                 </div>
                 <div class="col-8">
                   <div class="card-body">
-                    <h5 class="card-title"><%= link_to post.title, admin_post_path(post.id) %></h5>
-                     <p class="card-text">
-                                          ジャンル：<%= post.genre.name %><br>
-                                          品番：<%= post.product_name %><br>
-                                          参考になった：   <%= post.favorites.count %>
-                     </p>
-                     <p class="card-text text-right"><%= post.created_at.strftime("%Y年%m月%d日") %>投稿</p>
+                    <h5 class="card-title" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">
+                      <%= link_to post.title, admin_post_path(post.id) %>
+                    </h5>
+                       <p class="card-text">
+                         <div class="row">
+                           <div class="col-4">ジャンル</div>
+                           <div class="col-8">：<%= post.genre.name %></div>
+                         </div>
+                         <div class="row">
+                           <div class="col-4">品番</div>
+                           <div class="col-8">：<%= post.product_name %></div>
+                         </div>
+                         <div class="row">
+                           <div class="col-4">参考になった</div>
+                           <div class="col-8">：<%= post.favorites.count %> 件</div>
+                         </div>
+                         <div class="row">
+                           <div class="col-4">おすすめ</div>
+                           <div class="col-8">：<%= render 'public/posts/static_rate', post: post %></div>
+                         </div>
+                       </p>
+                     <p class="card-text text-right text-secondary"><%= post.created_at.strftime("%Y年%m月%d日") %>投稿</p>
                   </div>
                 </div>
               </div>
