--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <h5 class="col-12 text-center border p-3 my-3"><%= @user.name %>さんのマイページ</h5> 
+  <h5 class="col-12 text-center border p-3 my-3"><%= @user.name %>さんのマイページ</h5>
 </div>
 
 <div class="row">
@@ -13,10 +13,20 @@
             </div>
             <div class="col-9">
               <div class="card-body">
-                <h5 class="card-title"><%= @user.name %></h5>
-                 <p class="card-text"><br>
-                                      性別：<%= @user.sex %><br>
-                                      メールアドレス：<%= @user.email %>
+                <h5 class="card-title"></h5>
+                 <p class="card-text">
+                   <div class="row">
+                     <div class="col-4">ユーザー名</div>
+                     <div class="col-8">：<%= @user.name %></div>
+                   </div>
+                   <div class="row">
+                     <div class="col-4">性別</div>
+                     <div class="col-8">：<%= @user.sex %></div>
+                   </div>
+                   <div class="row">
+                     <div class="col-4">メールアドレス</div>
+                     <div class="col-8">：<%= @user.email %></div>
+                   </div>
                  </p>
               </div>
             </div>
@@ -51,18 +61,33 @@
                 </div>
                 <div class="col-8">
                   <div class="card-body">
-                    <h5 class="card-title"><%= link_to post.title, post_path(post.id) %></h5>
+                    <h5 class="card-title" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">
+                      <%= link_to post.title, post_path(post.id) %>
+                    </h5>
                      <p class="card-text">
-                                          ジャンル：<%= post.genre.name %><br>
-                                          品番：<%= post.product_name %><br>
-                                          参考になった：   <%= post.favorites.count %>
+                       <div class="row">
+                         <div class="col-4">ジャンル</div>
+                         <div class="col-8">：<%= post.genre.name %></div>
+                       </div>
+                       <div class="row">
+                         <div class="col-4">品番</div>
+                         <div class="col-8">：<%= post.product_name %></div>
+                       </div>
+                       <div class="row">
+                         <div class="col-4">参考になった</div>
+                         <div class="col-8">：<%= post.favorites.count %> 件</div>
+                       </div>
+                       <div class="row">
+                         <div class="col-4">おすすめ</div>
+                         <div class="col-8">：<%= render 'public/posts/static_rate', post: post %></div>
+                       </div>
                      </p>
-                     <p class="card-text text-right"><%= post.created_at.strftime("%Y年%m月%d日") %>投稿</p>
+                     <p class="card-text text-right text-secondary"><%= post.created_at.strftime("%Y年%m月%d日") %>投稿</p>
                   </div>
                 </div>
               </div>
             </div>
-            <% end %>
+          <% end %>
       </div>
     </div>
       <%= render 'partial_template/paginate', posts: @posts %>
