Topページ変更

--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -12,7 +12,7 @@
               <td style="text-align: center;"><%= @post.created_at.strftime("%Y年%m月%d日") %></td>
             </tr>
             <tr>
-              <th>ユーザ名</th>
+              <th>ユーザー名</th>
               <td style="text-align: center;"><%= @post.user.name %></td>
             </tr>
             <tr>
