--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,4 +1,8 @@
-<%= render 'public/shared/error_messages', resource: @post %>
+<div class=row>
+  <div class="col-8 offset-3">
+    <%= render "public/shared/error_messages", resource: @post %>
+  </div>
+</div>
 <div class=container>
   <div class=row>
     <div class="col-10 offset-1">
