--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,4 +1,8 @@
-<%= render "public/shared/error_messages", resource: @user %>
+<div class=row>
+  <div class="col-8 offset-3">
+    <%= render "public/shared/error_messages", resource: @user %>
+  </div>
+</div>
 <div class=container>
   <div class="row my-5">
     <h2 class="col-12 text-center">プロフィール編集</h2>
