--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,4 +1,8 @@
-<%= render 'public/shared/error_messages', resource: @post %>
+<div class=row>
+  <div class="col-8 offset-3">
+    <%= render "public/shared/error_messages", resource: @post %>
+  </div>
+</div>
 <div class="row">
   <div class="col-7 offset-2 mb-3">
     <div class="card">
@@ -18,7 +22,7 @@
               <td style="text-align: center;"><%= @post.created_at.strftime("%Y年%m月%d日") %></td>
             </tr>
             <tr>
-              <th>ユーザ名</th>
+              <th>ユーザー名</th>
               <td style="text-align: center;"><%= @post.user.name %></td>
             </tr>
             <tr>
