--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -17,14 +17,23 @@
  </div>
 
   <div class="btn-wrapper row mx-auto justify-content-center mb-5">
-    <div class="col-3">
-      <%= link_to "ゲストログイン（閲覧用）", public_guest_sign_in_path, class: "btn btn-outline-secondary btn-sm btn-block", method: :post %>
-    </div>
-    <div class="col-3">
-      <%= link_to '新規登録', new_user_registration_path, class: "btn btn-outline-info btn-sm btn-block" %>
-    </div>
-    <div class="col-3">
-      <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-success btn-sm btn-block"  %>
-    </div>
+    <% if signed_in? %>
+      <div class="col-3">
+        <%= link_to "ゲストログイン（閲覧用）", public_guest_sign_in_path, class: "btn btn-outline-secondary btn-sm btn-block", method: :post %>
+      </div>
+      <div class="col-3">
+        <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-success btn-sm btn-block"  %>
+      </div>
+    <% else %>
+      <div class="col-3">
+        <%= link_to "ゲストログイン（閲覧用）", public_guest_sign_in_path, class: "btn btn-outline-secondary btn-sm btn-block", method: :post %>
+      </div>
+      <div class="col-3">
+        <%= link_to '新規登録', new_user_registration_path, class: "btn btn-outline-info btn-sm btn-block" %>
+      </div>
+      <div class="col-3">
+        <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-success btn-sm btn-block"  %>
+      </div>
+    <% end %>
   </div>
 
