--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -50,6 +50,11 @@
                 <button type="button" data-toggle="modal" data-target="#exampleModalLong">
                   <%= image_tag @post.get_image, height: 200 %>
                 </button>
+                <div class="tag-box">
+                  <% @post.tags.each do |tag| %>
+                    <span class="label"><%= tag.name %></span>
+                  <% end %>
+                </div>
                 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                   <div class="modal-dialog" role="document">
                     <div class="modal-body">
