AI実装 レイアウト変更

--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -52,7 +52,7 @@
                 </button>
                 <div class="tag-box">
                   <% @post.tags.each do |tag| %>
-                    <span class="label"><%= tag.name %></span>
+                    <span class="badge badge-success"><%= tag.name %></span>
                   <% end %>
                 </div>
                 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
