--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,59 +1,64 @@
-<div class=row>
+<div class="row">
   <div class="col-8 offset-3">
     <%= render "public/shared/error_messages", resource: @post %>
   </div>
 </div>
-<div class=container>
-  <div class=row>
-    <div class="col-10 offset-1">
-      <h1 class="mt-4 ">投稿フォーム</h1>
-      <%= form_with model: @post do |f| %>
-      <div class="form-group mt-4">
-        <h4>タイトル</h4>
-        <%= f.text_area :title, class:"form-control form-control-sm" %>
-      </div>
-      <div class="form-row">
-        <div class="form-group col-6">
-          <h4>型式</h4>
-          <%= f.text_field :product_name, class:"form-control form-control-sm" %>
-        </div>
-        <div class="form-group col-6">
-          <h4>ジャンル</h4>
-          <%= f.collection_select :genre_id, Genre.all, :id, :name,{include_blank: '-- 選択してください --'} ,{class: "form-control form-control-sm", id: "custom_genre_select",include_blank: 'aaa'} %>
-        </div>
-      </div>
-      <div class="form-row mb-2">
-        <div class="form-group col-6">
-          <h4 class="mb-3">紹介画像</h4>
-          <%= f.file_field :image, accept: "image/*" %>
-        </div>
-        <div class="form-group col-6" id="star">
-          <h4 class="mb-3">5段階評価</h4>
-          <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
-          <div id="post_raty"></div>
-        </div>
-        <script>
-          $(document).on('turbolinks:load', function() {
-            let elem = document.querySelector('#post_raty');
-            if (elem == null) return;
 
-            elem.innerHTML = ""
-            let opt = {
-              starOn: "<%= asset_path('star-on.png') %>",
-              starOff: "<%= asset_path('star-off.png') %>",
-              scoreName: 'post[star]',
-            };
-            raty(elem, opt);
-          });
-        </script>
-      </div>
-      <div class="form-group">
-        <h4>紹介文</h4>
-        <%= f.text_area :introduction, class:"form-control custom-text-area" %>
-      </div>
-      <div class="form-group text-center">
-        <%= f.submit '　投　稿　', class: "btn btn-outline-dark" %>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col-10 offset-1">
+      <h1 class="mt-4">投稿フォーム</h1>
+      <%= form_with model: @post do |f| %>
+        <div class="form-group mt-4">
+          <h4>タイトル</h4>
+          <%= f.text_area :title, class: "form-control form-control-sm" %>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-6">
+            <h4>型式</h4>
+            <%= f.text_field :product_name, class: "form-control form-control-sm" %>
+          </div>
+          <div class="form-group col-6">
+            <h4>ジャンル</h4>
+            <%= f.collection_select :genre_id, Genre.all, :id, :name, { include_blank: '-- 選択してください --' }, { class: "form-control form-control-sm", id: "custom_genre_select", include_blank: 'aaa' } %>
+          </div>
+        </div>
+
+        <div class="form-row mb-2">
+          <div class="form-group col-6">
+            <h4 class="mb-3">紹介画像</h4>
+            <%= f.file_field :image, accept: "image/*" %>
+          </div>
+          <div class="form-group col-6" id="star">
+            <h4 class="mb-3">5段階評価</h4>
+            <%= f.hidden_field :star, id: :review_star, class: 'form-control' %>
+            <div id="post_raty"></div>
+          </div>
+          <script>
+            $(document).on('turbolinks:load', function() {
+              let elem = document.querySelector('#post_raty');
+              if (elem == null) return;
+
+              elem.innerHTML = "";
+              let opt = {
+                starOn: "<%= asset_path('star-on.png') %>",
+                starOff: "<%= asset_path('star-off.png') %>",
+                scoreName: 'post[star]',
+              };
+              raty(elem, opt);
+            });
+          </script>
+        </div>
+
+        <div class="form-group">
+          <h4>紹介文</h4>
+          <%= f.text_area :introduction, class: "form-control custom-text-area" %>
+        </div>
+
+        <div class="form-group text-center">
+          <%= f.submit '　投　稿　', class: "btn btn-outline-dark" %>
+        </div>
       <% end %>
     </div>
   </div>
