--- a/app/views/public/users/chcek.html.erb
+++ b/app/views/public/users/chcek.html.erb
@@ -1,4 +1,4 @@
-<div class=container>  
+<div class="container">  
   <div class="row justify-content-center mt-5">
     <div class="col-md-8">
       <section class="check-edit">
@@ -9,10 +9,10 @@
           退会する場合は、「退会する」をクリックしてください。
         </p>
         <div class="d-flex justify-content-around mt-5">
-          <%= link_to "退会する", withdraw_path, method: :patch, :class => "btn btn-outline-danger ms-3", data: { confirm: "本当に退会しますか？" }  %>
-          <%= link_to "退会しない", user_mypage_path(current_user), :class => "btn btn-outline-primary ms-3" %>
+          <%= link_to "退会する", withdraw_path, method: :patch, class: "btn btn-outline-danger ms-3", data: { confirm: "本当に退会しますか？" }  %>
+          <%= link_to "退会しない", user_mypage_path(current_user), class: "btn btn-outline-primary ms-3" %>
         </div>
       </section>
     </div>
   </div>
-</divv>
+</div>
