--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,51 +1,53 @@
-<div class=row>
+<div class="row">
   <div class="col-8 offset-3">
     <%= render "public/shared/error_messages", resource: @user %>
   </div>
 </div>
-<div class=container>
+
+<div class="container">
   <div class="row my-5">
     <h2 class="col-12 text-center">プロフィール編集</h2>
   </div>
-  <div class=row-md-5>
+
+  <div class="row-md-5">
     <%= form_with model: @user, url: update_information_path, method: :patch do |f| %>
-    <div class="infomation-edit">
-        <table class="table" >
+      <div class="infomation-edit">
+        <table class="table">
           <tr>
             <td>ユーザ名の変更</td>
-              <td>
-                <div class="form-group">
-                  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:@user.name%>
-                </div>
-              </td>
+            <td>
+              <div class="form-group">
+                <%= f.text_field :name, autofocus: true, id: "inputName", placeholder: @user.name %>
+              </div>
+            </td>
           </tr>
           <tr>
             <td>メールアドレスの変更</td>
-              <td>
-                <div class="form-group">
-                  <%= f.email_field :email, placeholder: "メールアドレス",placeholder: @user.email %>
-                </div>
-              </td>
+            <td>
+              <div class="form-group">
+                <%= f.email_field :email, placeholder: "メールアドレス", placeholder: @user.email %>
+              </div>
+            </td>
           </tr>
           <tr>
             <td>プロフィール画像の変更</td>
-              <td>
-                <div class="form-group">
-                  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-                </div>
-              </td>
-          </tr>
+            <td>
+              <div class="form-group">
+                <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
+              </div>
+            </td>
           </tr>
           <tr>
             <td colspan="2">
               <div class="d-flex justify-content-between mt-5">
                 <%= f.submit "編集内容を保存", class: "btn btn-outline-primary" %>
-                <%= link_to "マイページに戻る" , user_mypage_path(current_user), class: "btn btn-outline-dark" %>
+                <%= link_to "マイページに戻る", user_mypage_path(current_user), class: "btn btn-outline-dark" %>
                 <%= link_to "退会する", chcek_path, class: "btn btn-outline-danger" %>
               </div>
             </td>
+          </tr>
         </table>
-    </div>
+      </div>
     <% end %>
   </div>
 </div>
